Prevent YouTube's flickering scrollbar bug

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -439,3 +439,12 @@ body.immersive-mode .toggle-auto-hide-btn {
   font-size: 18px;
   pointer-events: none;
 }
+
+
+/* Prevent YouTube's flickering scrollbar bug */
+
+#page-manager.ytd-app {
+  overflow: visible !important;
+  overflow-y: visible !important;
+  overflow-x: visible !important;
+}
